--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravelsocket
-DB_USERNAME=admin
-DB_PASSWORD=xpert21
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
@@ -48,7 +48,7 @@ PUSHER_APP_KEY=dgfdfgfdg
 PUSHER_APP_SECRET=dfgdferrnhn
 PUSHER_HOST=127.0.0.1
 PUSHER_PORT=6001
-PUSHER_SCHEME=https
+PUSHER_SCHEME=http
 PUSHER_APP_CLUSTER=mt1
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
